--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
   "homepage": "https://github.com/mccormicka/mongoosetoken",
   "readmeFilename": "README.md",
   "dependencies": {
-    "nodelogger": "https://github.com/mccormicka/nodelogger/archive/master.tar.gz",
     "lodash": "~1.3.1",
-    "bcrypt": "~0.7.7"
+    "bcrypt": "~0.7.7",
+    "bunyan": "~0.22.1"
   },
   "devDependencies": {
     "grunt": "0.4.1",
